# edgePy

./: .codecov.yml  .gitignore  .gitmodules  .travis.yml  GSE49712_HTSeq.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements-test.txt  sample_input.txt  setup.cfg  setup.py  tox.ini
docs/: CONTRIBUTING.md  Links.md  Makefile  conf.py  data-formats.md  functionality.md  index.rst  make.bat  planned_statistical_tests.md  requirements-docs.txt
docs/source/: CONTRIBUTING.md  conf.py  data-formats.md  edgePy.data_import.mongodb.rst  edgePy.data_import.rst  edgePy.rst  functionality.md  index.rst  modules.rst  planned_statistical_tests.md  planned_statistical_tests.rst  scripts.rst
edgePy/: DGEList.py  DGElist.py  _DGEList.py  __init__.py  edgePy.py  util.py
edgePy/DGEList/: DGEList.py  _DGEList.py  __init__.py
edgePy/benchmarking/: 00.GSE49712.Rscript.txt  00.GSE49712_gene_FPKM.txt  07.DEGs.tsv  08.topDEGs.tsv  README_benchmark.md
edgePy/data/: 00.GSE49712_gene_FPKM.txt  GSE49712_HTSeq.npz  GSE49712_HTSeq.txt.npz  example_gene_list.txt  groups.json  groups.txt  symbols_homo_sapiens_core_75_37.tsv
edgePy/data_import/: data_import.py  user_defined.py
edgePy/filter/: __init__.py
edgePy/io/: __init__.py  _io.py  merge_counts.py
edgePy/normalization/: __init__.py  normalization.py
edgepy/: DGEList.py
scripts/: EdgePy.py  edgePy  edgePy.py  edgepy.py
src/: DGEList.py  __init__.py
tests/: flake8.sh  mypy.sh  pylint.sh  run-tests.sh  test-runner.sh  test_DGEL.py  test_DGEList.py  test_edgePy.py  test_import_data.py  test_io.py  test_template.py
(+36 files in other folders)
