[metadata]
name = edgePy
version = 0.0.1
author = r-bioinformatics
url = https://github.com/r-bioinformatics/edgePy
description = A Python port of edgeR for differential expression analysis.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = bioinformatics, gene, differential, expression, edgeR
requires-dist = setuptools>=30.3.0
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: Bio-Informatics
    Programming Language :: Python :: 3.6
project-urls =
    Slack-Group = https://r-bioinformatics.slack.com/
    Subreddit = https://reddit.com/r/bioinformatics/

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    numpy>=1.14.5
    smart_open>=1.6.0
    tox>=3.1.2
    scipy>=1.1.0


[mypy]
warn_redundant_casts = True
warn_unused_ignores = True
mypy_path = docs/stubs
python_version = 3.6

[mypy-*]
disallow_untyped_calls = True
disallow_untyped_defs = True
warn_return_any = True
no_implicit_optional = True
strict_optional = True
ignore_missing_imports = False

[flake8]
max-line-length = 120
doctests = True
show-source = True
ignore =
exclude =
    .git
    .mypy_cache
    .pytest_cache
    libs
    docs
    tests
    __init__.py

[tool:pytest]
addopts = --verbose --doctest-modules --cov

[coverage:run]
branch = true
source = edgePy
parallel = true
